# uuid47-rs

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md
benches/: operations.rs
examples/: basic.rs
src/: error.rs  internal.rs  key.rs  lib.rs  main.rs  utils.rs  uuid.rs
tests/: mod.rs  tests.rs
