[package]
name = "uuid47"
description = "A simple and lightweight library for converting between UUIDv7 and UUIDv4 facade."
authors = [ "potistudio <potistudio@proton.me>" ]
version = "1.0.0"
license = "MIT"
repository = "https://github.com/potistudio/uuid47-rs"
keywords = [ "uuid", "uuidv4", "uuidv7", "uuidv47" ]
readme = "README.md"
edition = "2024"

[dev-dependencies]
criterion = "0.5"

[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1

[[bench]]
name = "operations"
harness = false
